tests/pass/PrefixDecrement.java
package pass;

public class PrefixDecrement {
    public int doPrefixDec(int x, int y){
        y = --x;
        return y;
    }
}