tests/fail/PrefixDecrement.java
package fail;

public class PrefixDecrement {
    public static void main(String[] args) {
        System.out.println(--'a');
    }
}